welcome.lessons.welcome.array.island.Island.scala.error
island:7: error: ';' expected but 'if' found.
    } if(num(i)==2 && (num(i-1)<3)){
      ^